KSMServer::tryRestore: fix indexing of entries

Inspection of entries in .config/ksmserverrc suggests that the session
application entries are indexed starting from 1, while the code seems to
assume that it starts from 0. This wrong assumption leads to restoring
only N-1 windows, when N windows were supposed to be restored.

BUG: 477146